* Fixed bug of missing water attribute on linearforcefield.
* Add child now only propose child that are valid to add to the selected item.
* Completion is provided for ball type
* Completion list is now sorted in non case-sensitive order
* Missing SceneLayer colorize attribute
* Missing signpost image attribute
* Added check to prefix removing the root of the tree
* Added unique identifier generation when adding child
* Added support for cut/copy/paste of node and composite. The element XML is stored in the clipboard and can be used to mess around.

- Version 0.3.1:
* Fixed bug that prevented adding/editing a new pipe in a level


- Version 0.3.0:

* Added support for adding/removing object in level, scene and resourc file
* Added support for editing objects' properties in level, scene and resource file
* Validation based on properties type (including reference to other object)
* New level, clone level tool, update level resource tool added
* Save tool, and test level tool added