@@ -7,6 +7,7 @@
 * Added check to prefix removing the root of the tree
 * Added unique identifier generation when adding child
 * Added support for cut/copy/paste of node and composite. The element XML is stored in the clipboard and can be used to mess around.
+* Keyboard shortcut for cut/copy/paste/delete works in all views.
 
 - Version 0.3.1:
 * Fixed bug that prevented adding/editing a new pipe in a level
